--- a/app/views/ideabases/new.html.erb
+++ b/app/views/ideabases/new.html.erb
@@ -1,12 +1,29 @@
-<h1>New Ideabase</h1>
-
-<form action="/create_ideabase">
-  <div>
-    <label for="idea">Idea</label><br />
-    <input id="idea" name="idea" type="text" />
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/ideabases">Ideas</a>
+    </div>
   </div>
-  <div>
-    <input type="submit">
+</nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1>New Idea</h1>
+        <form role="form" action="/create_ideabase">
+          <div class="form-group">
+            <label for="idea" class="control-label">Idea</label>
+              <input type="text" class="form-control" id="idea" name="idea" placeholder="The wheel">
+            </div>
+            <input type="submit" class="btn btn-primary">
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</form>
 
